--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,29 @@ body {
   font-family: "Zilla Slab", serif;
 }
 
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.title {
+  text-align: center;
+  color: white;
+  margin: 20px 0;
+}
+
+.blog {
+  text-decoration: none;
+  position: absolute;
+  color: #9dffad;
+  right: 225px;
+  font-size: 22px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
 .box-container {
   width: 70%;
   margin: 0 auto;
@@ -25,11 +48,9 @@ body {
   font-size: 25px;
   border-radius: 15px;
   background: rgb(255, 255, 255);
-  background: linear-gradient(
-    92.49deg,
-    rgba(255, 255, 255, 0.1) 0.18%,
-    rgba(255, 255, 255, 0.05) 99.85%
-  );
+  background: linear-gradient(92.49deg,
+      rgba(255, 255, 255, 0.1) 0.18%,
+      rgba(255, 255, 255, 0.05) 99.85%);
   backdrop-filter: blur(5px);
   margin-bottom: 30px;
 }
@@ -61,10 +82,11 @@ body {
   color: white;
   display: none;
 }
+
 #result {
-  position: fixed;
-  top: 10%; 
-  left: 10%;
+  position: absolute;
+  top: 60%;
+  left: 56%;
   transform: translate(-50%, -50%);
   height: 250px;
   width: 400px;
@@ -75,7 +97,8 @@ body {
   text-align: center;
   padding: 2rem;
 }
-#show-time{
+
+#show-time {
   text-align: center;
   color: white;
   margin: 10px 0;
@@ -84,18 +107,23 @@ body {
 .green {
   color: #9dffad;
 }
+
 .red {
   color: #eb6565;
 }
+
 .bold {
   font-weight: 700;
 }
+
 .inactive {
   border: 2px solid white !important;
 }
+
 .hidden {
   display: none;
 }
+
 .title {
   text-align: center;
   color: white;
@@ -127,6 +155,7 @@ body {
   justify-content: center;
   margin: 30px 0;
 }
+
 button {
   padding: 10px 20px;
   border: none;
@@ -142,38 +171,37 @@ button {
 }
 
 #histories {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 15px;
+  /* flex-wrap: wrap;
+  justify-content: space-around; */
 }
 
 .card {
   width: 100%;
   height: 100%;
   padding: 50px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  text-align: center;
+  /* display: flex; */
+  /* justify-content: space-between; */
+  /* align-items: center; */
   padding: 20px 30px;
   color: white;
   border-radius: 15px;
   background: rgb(255, 255, 255);
-  background: linear-gradient(
-    92.49deg,
-    rgba(255, 255, 255, 0.1) 0.18%,
-    rgba(255, 255, 255, 0.05) 99.85%
-  );
+  background: linear-gradient(92.49deg,
+      rgba(255, 255, 255, 0.1) 0.18%,
+      rgba(255, 255, 255, 0.05) 99.85%);
   backdrop-filter: blur(5px);
   margin-bottom: 30px;
 }
 
 #modal-background {
   background: rgb(255, 255, 255);
-  background: linear-gradient(
-    92.49deg,
-    rgba(255, 255, 255, 0.1) 0.18%,
-    rgba(255, 255, 255, 0.05) 99.85%
-  );
+  background: linear-gradient(92.49deg,
+      rgba(255, 255, 255, 0.1) 0.18%,
+      rgba(255, 255, 255, 0.05) 99.85%);
   backdrop-filter: blur(5px);
   height: 100vh;
   width: 100%;
@@ -186,7 +214,16 @@ button {
     padding: 0 20px;
     width: 100%;
   }
+
   .card {
     flex-direction: column;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  #histories {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
   }
 }
