--- a/blogs.css
+++ b/blogs.css
@@ -34,17 +34,18 @@ header {
     cursor: pointer;
 }
 
-#articles article b {
-    color: #9dffad;
+#blogs div b {
+    color: aquamarine;
 }
 
-#articles article {
+#blogs div {
     color: white;
     border: 1px solid #9dffad;
     border-radius: 5px;
     padding: 15px 10px;
     margin-bottom: 15px;
 }
+
 
 .box-container {
     width: 70%;
